# PolyChordLite

./: CMakeLists.txt  README.rst  hello_world.py  pyproject.toml  quickstart.ipynb  quickstart.py  requirements.txt  run_pypolychord.ipynb  run_pypolychord.py  setup.py
.github/workflows/: CI.yml
pypolychord/: __init__.py  _pypolychord.cpp  polychord.py  polychord.py.orig
src/polychord/: c_interface.cpp  calculate.f90  clustering.f90  feedback.f90  generate.F90  ini.f90  interfaces.F90  interfaces.h  interfaces.hpp  nested_sampling.F90  random_utils.F90  read_write.F90  run_time_info.f90  settings.f90  utils.F90
