[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pypolychord"
dynamic = ["version", "description", "license", "authors", "dependencies"]

[project.optional-dependencies]
cube_samples = ["fortranformat"]

[tool.setuptools.dynamic]
version = {attr = "pypolychord.__version__"}
